--- a/src/global.css
+++ b/src/global.css
@@ -5,10 +5,10 @@
 @layer components {
   .btn {
     transition: all 0.2s ease-in-out;
-    @apply px-4 py-2 bg-blue-400 text-white rounded;
+    @apply px-4 py-2 text-white bg-blue-800 border-2 border-white rounded;
   }
   .btn:hover {
-    @apply bg-blue-600;
+    @apply text-blue-800 bg-white;
   }
 
   .wrapper {
